--- a/이코테_4_구현.ipynb
+++ b/이코테_4_구현.ipynb
@@ -591,7 +591,7 @@
       "source": [
         "# idea: 단위별로 다 길이를 계산해두고 그 중 min 값을 출력하자\n",
         "\n",
-        "def solution(s):\n",
+        "def solution(s_original):\n",
         "  # 특정문자열이 반복되려면 최소 두 구간으로 나뉘어져야하므로 자를 수 있는 최대 단위는 2로 나눈 몫\n",
         "  maxcut = len(s_original) // 2\n",
         "\n",
