--- a/3주차/백준_20115_에너지드링크.ipynb
+++ b/3주차/백준_20115_에너지드링크.ipynb
@@ -86,6 +86,36 @@
     "xi_list.sort(reverse = True)\n",
     "print(xi_list[0] + sum(map(lambda x: x / 2, xi_list[1:])))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 다른 사람 풀이\n",
+    "* idea  \n",
+    "첫요소 + (나머지요소들/2) 을 계산하겠다는 건 같은데,  \n",
+    "굳이 정렬시켜서 인덱스로 할 게 아니라  \n",
+    "나머지요소들합 = (전체합 - max값) 을 이용하면 이지,,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input()\n",
+    "xi_list = list(map(int, input().split()))\n",
+    "print((sum(xi_list) + max(xi_list))/2)"
+   ]
   }
  ],
  "metadata": {
