--- a/3주차/백준_20115_에너지드링크.ipynb
+++ b/3주차/백준_20115_에너지드링크.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "n = input()\n",
     "xi_list = list(map(int, input().split()))\n",
-    "print((sum(xi_list) + max(xi_list))/2)"
+    "print((sum(xi_list) + max(xi_list))/2)ㅎ"
    ]
   }
  ],
