--- a/9주차/백준_골드4_2110_공유기설치.ipynb
+++ b/9주차/백준_골드4_2110_공유기설치.ipynb
@@ -20,28 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mid: 5\n",
+      "mid: 4\n",
       "8\n",
       "cnt: 3\n",
       "move end==========\n",
       "mid: 2\n",
-      "5\n",
-      "8\n",
-      "cnt: 4\n",
+      "4\n",
+      "cnt: 3\n",
       "move start==========\n",
       "mid: 3\n",
-      "5\n",
-      "8\n",
-      "cnt: 4\n",
-      "move end==========\n",
-      "2\n"
+      "4\n",
+      "cnt: 3\n",
+      "move start==========\n",
+      "3\n"
      ]
     }
    ],
@@ -80,7 +78,7 @@
     "                break\n",
     "\n",
     "        print('cnt:', c_cnt)\n",
-    "        if c_cnt < c or c_last - i < mid: # 설치 대수가 모자르거나 끝 집과 그 전 집 거리 부족\n",
+    "        if c_cnt < c or c_last - old < mid: # 설치 대수가 모자르거나 끝 집과 그 전 집 거리 부족\n",
     "            print('move end==========')\n",
     "            end = mid - 1\n",
     "        else:\n",
