--- a/9주차/백준_실버1_2343_기타레슨.ipynb
+++ b/9주차/백준_실버1_2343_기타레슨.ipynb
@@ -55,10 +55,11 @@
     "        start = mid+1\n",
     "    else:\n",
     "        end = mid-1\n",
-    "        if(mid >= vm):\n",
-    "            result = min(result, mid)\n",
+    "        # if(mid >= vm):\n",
+    "        #     result = min(result, mid)\n",
     "\n",
-    "print(result)"
+    "# print(result)\n",
+    "print(end + 1)"
    ]
   }
  ],
