--- a/9주차/백준_실버2_6236_용돈관리.ipynb
+++ b/9주차/백준_실버2_6236_용돈관리.ipynb
@@ -16,13 +16,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mid: 199 ============================\n",
+      "i: 100\n",
+      "exist charge 850\n",
+      "i: 100\n",
+      "exist charge 750\n",
+      "i: 100\n",
+      "exist charge 650\n",
+      "i: 100\n",
+      "exist charge 550\n",
+      "i: 500\n",
+      "exist charge 50\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 849\n",
+      "i: 400\n",
+      "exist charge 449\n",
+      "mid: 950 ============================\n",
+      "i: 100\n",
+      "exist charge 624\n",
+      "i: 100\n",
+      "exist charge 524\n",
+      "i: 100\n",
+      "exist charge 424\n",
+      "i: 100\n",
+      "exist charge 324\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 224\n",
+      "i: 101\n",
+      "exist charge 123\n",
+      "i: 400\n",
+      "new charge\n",
+      "exist charge 324\n",
+      "mid: 724 ============================\n",
+      "i: 100\n",
+      "exist charge 511\n",
+      "i: 100\n",
+      "exist charge 411\n",
+      "i: 100\n",
+      "exist charge 311\n",
+      "i: 100\n",
+      "exist charge 211\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 111\n",
+      "i: 101\n",
+      "exist charge 10\n",
+      "i: 400\n",
+      "new charge\n",
+      "exist charge 211\n",
+      "mid: 611 ============================\n",
+      "i: 100\n",
+      "exist charge 455\n",
+      "i: 100\n",
+      "exist charge 355\n",
+      "i: 100\n",
+      "exist charge 255\n",
+      "i: 100\n",
+      "exist charge 155\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 55\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 454\n",
+      "i: 400\n",
+      "exist charge 54\n",
+      "mid: 555 ============================\n",
+      "i: 100\n",
+      "exist charge 427\n",
+      "i: 100\n",
+      "exist charge 327\n",
+      "i: 100\n",
+      "exist charge 227\n",
+      "i: 100\n",
+      "exist charge 127\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 27\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 426\n",
+      "i: 400\n",
+      "exist charge 26\n",
+      "mid: 527 ============================\n",
+      "i: 100\n",
+      "exist charge 413\n",
+      "i: 100\n",
+      "exist charge 313\n",
+      "i: 100\n",
+      "exist charge 213\n",
+      "i: 100\n",
+      "exist charge 113\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 13\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 412\n",
+      "i: 400\n",
+      "exist charge 12\n",
+      "mid: 513 ============================\n",
+      "i: 100\n",
+      "exist charge 406\n",
+      "i: 100\n",
+      "exist charge 306\n",
+      "i: 100\n",
+      "exist charge 206\n",
+      "i: 100\n",
+      "exist charge 106\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 6\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 405\n",
+      "i: 400\n",
+      "exist charge 5\n",
+      "mid: 506 ============================\n",
+      "i: 100\n",
+      "exist charge 402\n",
+      "i: 100\n",
+      "exist charge 302\n",
+      "i: 100\n",
+      "exist charge 202\n",
+      "i: 100\n",
+      "exist charge 102\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 2\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 401\n",
+      "i: 400\n",
+      "exist charge 1\n",
+      "mid: 502 ============================\n",
+      "i: 100\n",
+      "exist charge 400\n",
+      "i: 100\n",
+      "exist charge 300\n",
+      "i: 100\n",
+      "exist charge 200\n",
+      "i: 100\n",
+      "exist charge 100\n",
+      "i: 500\n",
+      "new charge\n",
+      "exist charge 0\n",
+      "i: 101\n",
+      "new charge\n",
+      "exist charge 399\n",
+      "i: 400\n",
+      "new charge\n",
+      "exist charge 100\n",
       "500\n"
      ]
     }
@@ -36,14 +189,20 @@
     "rt = sum(daily)\n",
     "\n",
     "while lt <= rt:\n",
+    "\n",
+    "    print('mid:', mid,'============================')\n",
     "    mid = (lt + rt) // 2 # 인출할 금액\n",
     "    charge = mid # 현재 가진 돈 (처음 인출)\n",
     "    num = 1 # 인출 횟수\n",
     "    for i in range(n): # n일동안 \n",
+    "        print('i:', daily[i])\n",
     "        if charge < daily[i]:\n",
+    "            print('new charge')\n",
     "            charge = mid # 부족하면 새로 꺼낸다고 했으니까\n",
     "            num += 1\n",
+    "        \n",
     "        charge -= daily[i]\n",
+    "        print('exist charge', charge)\n",
     "\n",
     "    # m번보다 많이 인출했다면\n",
     "    if num > m : \n",
@@ -52,7 +211,7 @@
     "        rt = mid - 1\n",
     "        k = mid\n",
     "\n",
-    "print(k)\n"
+    "print(k)"
    ]
   }
  ],
